# deep-learning-cv

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: architecture.md
docs/decisions/: 001-pytorch-over-tensorflow.md  002-transfer-learning-strategy.md
experiments/configs/: custom_cnn.yaml  efficientnet_b0.yaml  resnet50.yaml
src/: __init__.py  cli.py
src/data/: __init__.py  augmentations.py  datasets.py  food101_dataset.py  splits.py
src/evaluation/: __init__.py  analysis.py  metrics.py
src/inference/: __init__.py  export.py  predict.py
src/models/: __init__.py  clip_zero_shot.py  cnn.py  gradcam.py  gradio_demo.py  transfer.py
src/training/: __init__.py  callbacks.py  config.py  trainer.py
tests/integration/: test_training.py
tests/unit/: test_datasets.py  test_metrics.py  test_models.py
